Funciona con cierta basura en la salida